# rl-checkers

./: .pre-commit-config.yaml  main.py  pyproject.toml
.vim/: coc-settings.json
lib/: alpha_beta.py  benchmark.py  dqn.py  log.py  mlp.py  models.py  offline_lambda.py  play.py  trainer.py  utils.py
